server/out/parser/LPCParser.js
"use strict";
// Generated from grammar/LPCParser.g4 by ANTLR 4.9.0-SNAPSHOT
Object.defineProperty(exports, "__esModule", { value: true });
exports.ExpressionOrEllipsisContext = exports.ArgumentListContext = exports.PrimaryContext = exports.AssignmentOperatorContext = exports.ClosureExpressionContext = exports.CastExpressionContext = exports.AssignmentExprContext = exports.ConditionalExprContext = exports.LogicalOrExprContext = exports.LogicalAndExprContext = exports.ImplicitConcatExprContext = exports.BitwiseOrExprContext = exports.BitwiseXorExprContext = exports.BitwiseAndExprContext = exports.EqualityExprContext = exports.RelationalExprContext = exports.ShiftExprContext = exports.AdditiveExprContext = exports.MultiplicativeExprContext = exports.CastExprContext = exports.UnaryExprContext = exports.PreDecrementExprContext = exports.PreIncrementExprContext = exports.PostDecrementExprContext = exports.PostIncrementExprContext = exports.MemberAccessExprContext = exports.FunctionCallExprContext = exports.ArraySliceExprContext = exports.ArrayAccessExprContext = exports.PrimaryExprContext = exports.ExpressionContext = exports.PpBodyContext = exports.PpPragmaContext = exports.PpErrorContext = exports.PpConditionalContext = exports.PpDefineContext = exports.PpIncludeContext = exports.PreprocessorDirectiveContext = exports.InheritStatementContext = exports.ParameterContext = exports.ParameterListContext = exports.FunctionDeclarationContext = exports.VariableDeclaratorContext = exports.VariableDeclarationContext = exports.ExpressionStatementContext = exports.BlockContext = exports.StatementContext = exports.DeclarationContext = exports.ProgramContext = exports.LPCParser = void 0;
exports.FallthroughStatementContext = exports.ContinueStatementContext = exports.BreakStatementContext = exports.ReturnStatementContext = exports.DefaultClauseContext = exports.CaseClauseContext = exports.SwitchBlockContext = exports.SwitchStatementContext = exports.ForeachStatementContext = exports.DoWhileStatementContext = exports.WhileStatementContext = exports.ForStatementContext = exports.IfStatementContext = exports.KeywordIdentifierContext = exports.IdentifierContext = exports.ModifierContext = exports.TypeNameContext = exports.TypeSpecifierContext = exports.ExpressionListContext = exports.ArrayLiteralContext = exports.MappingElementContext = exports.MappingElementListContext = exports.MappingLiteralContext = exports.LiteralContext = void 0;
const ATN_1 = require("antlr4ts/atn/ATN");
const ATNDeserializer_1 = require("antlr4ts/atn/ATNDeserializer");
const FailedPredicateException_1 = require("antlr4ts/FailedPredicateException");
const NoViableAltException_1 = require("antlr4ts/NoViableAltException");
const Parser_1 = require("antlr4ts/Parser");
const ParserRuleContext_1 = require("antlr4ts/ParserRuleContext");
const ParserATNSimulator_1 = require("antlr4ts/atn/ParserATNSimulator");
const RecognitionException_1 = require("antlr4ts/RecognitionException");
const Token_1 = require("antlr4ts/Token");
const VocabularyImpl_1 = require("antlr4ts/VocabularyImpl");
const Utils = require("antlr4ts/misc/Utils");
class LPCParser extends Parser_1.Parser {
    // @Override
    // @NotNull
    get vocabulary() {
        return LPCParser.VOCABULARY;
    }
    // tslint:enable:no-trailing-whitespace
    // @Override
    get grammarFileName() { return "LPCParser.g4"; }
    // @Override
    get ruleNames() { return LPCParser.ruleNames; }
    // @Override
    get serializedATN() { return LPCParser._serializedATN; }
    createFailedPredicateException(predicate, message) {
        return new FailedPredicateException_1.FailedPredicateException(this, predicate, message);
    }
    constructor(input) {
        super(input);
        this._interp = new ParserATNSimulator_1.ParserATNSimulator(LPCParser._ATN, this);
    }
    // @RuleVersion(0)
    program() {
        let _localctx = new ProgramContext(this._ctx, this.state);
        this.enterRule(_localctx, 0, LPCParser.RULE_program);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 101;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << LPCParser.INHERIT) | (1 << LPCParser.PRIVATE) | (1 << LPCParser.PROTECTED) | (1 << LPCParser.PUBLIC) | (1 << LPCParser.STATIC) | (1 << LPCParser.NOMASK) | (1 << LPCParser.VARARGS) | (1 << LPCParser.NOSAVE) | (1 << LPCParser.REF) | (1 << LPCParser.VOID) | (1 << LPCParser.INT))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (LPCParser.STRING - 32)) | (1 << (LPCParser.OBJECT - 32)) | (1 << (LPCParser.ARRAY - 32)) | (1 << (LPCParser.MAPPING - 32)) | (1 << (LPCParser.FLOAT - 32)) | (1 << (LPCParser.BUFFER - 32)) | (1 << (LPCParser.MIXED - 32)) | (1 << (LPCParser.FUNCTION - 32)) | (1 << (LPCParser.CLASS - 32)) | (1 << (LPCParser.STRUCT - 32)) | (1 << (LPCParser.CLOSURE - 32)) | (1 << (LPCParser.PP_INCLUDE - 32)) | (1 << (LPCParser.PP_DEFINE - 32)) | (1 << (LPCParser.PP_IFDEF - 32)) | (1 << (LPCParser.PP_IFNDEF - 32)) | (1 << (LPCParser.PP_IF - 32)) | (1 << (LPCParser.PP_ERROR - 32)) | (1 << (LPCParser.PP_PRAGMA - 32)))) !== 0)) {
                    {
                        {
                            this.state = 98;
                            this.declaration();
                        }
                    }
                    this.state = 103;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 104;
                this.match(LPCParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    declaration() {
        let _localctx = new DeclarationContext(this._ctx, this.state);
        this.enterRule(_localctx, 2, LPCParser.RULE_declaration);
        try {
            this.state = 110;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 1, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 106;
                        this.preprocessorDirective();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 107;
                        this.inheritStatement();
                    }
                    break;
                case 3:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 108;
                        this.functionDeclaration();
                    }
                    break;
                case 4:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 109;
                        this.variableDeclaration();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    statement() {
        let _localctx = new StatementContext(this._ctx, this.state);
        this.enterRule(_localctx, 4, LPCParser.RULE_statement);
        try {
            this.state = 125;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case LPCParser.LBRACE:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 112;
                        this.block();
                    }
                    break;
                case LPCParser.PRIVATE:
                case LPCParser.PROTECTED:
                case LPCParser.PUBLIC:
                case LPCParser.STATIC:
                case LPCParser.NOMASK:
                case LPCParser.VARARGS:
                case LPCParser.NOSAVE:
                case LPCParser.REF:
                case LPCParser.VOID:
                case LPCParser.INT:
                case LPCParser.STRING:
                case LPCParser.OBJECT:
                case LPCParser.ARRAY:
                case LPCParser.MAPPING:
                case LPCParser.FLOAT:
                case LPCParser.BUFFER:
                case LPCParser.MIXED:
                case LPCParser.FUNCTION:
                case LPCParser.CLASS:
                case LPCParser.STRUCT:
                case LPCParser.CLOSURE:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 113;
                        this.variableDeclaration();
                    }
                    break;
                case LPCParser.EFUN:
                case LPCParser.NEW:
                case LPCParser.CATCH:
                case LPCParser.SSCANF:
                case LPCParser.PARSE_COMMAND:
                case LPCParser.TIME_EXPRESSION:
                case LPCParser.LPAREN:
                case LPCParser.SCOPE_RESOLUTION:
                case LPCParser.MINUS:
                case LPCParser.INC:
                case LPCParser.DEC:
                case LPCParser.NOT:
                case LPCParser.BITWISE_NOT:
                case LPCParser.STRING_LITERAL:
                case LPCParser.NUMBER:
                case LPCParser.IDENTIFIER:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 114;
                        this.expressionStatement();
                    }
                    break;
                case LPCParser.RETURN:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 115;
                        this.returnStatement();
                    }
                    break;
                case LPCParser.IF:
                    this.enterOuterAlt(_localctx, 5);
                    {
                        this.state = 116;
                        this.ifStatement();
                    }
                    break;
                case LPCParser.FOR:
                    this.enterOuterAlt(_localctx, 6);
                    {
                        this.state = 117;
                        this.forStatement();
                    }
                    break;
                case LPCParser.FOREACH:
                    this.enterOuterAlt(_localctx, 7);
                    {
                        this.state = 118;
                        this.foreachStatement();
                    }
                    break;
                case LPCParser.WHILE:
                    this.enterOuterAlt(_localctx, 8);
                    {
                        this.state = 119;
                        this.whileStatement();
                    }
                    break;
                case LPCParser.DO:
                    this.enterOuterAlt(_localctx, 9);
                    {
                        this.state = 120;
                        this.doWhileStatement();
                    }
                    break;
                case LPCParser.SWITCH:
                    this.enterOuterAlt(_localctx, 10);
                    {
                        this.state = 121;
                        this.switchStatement();
                    }
                    break;
                case LPCParser.BREAK:
                    this.enterOuterAlt(_localctx, 11);
                    {
                        this.state = 122;
                        this.breakStatement();
                    }
                    break;
                case LPCParser.CONTINUE:
                    this.enterOuterAlt(_localctx, 12);
                    {
                        this.state = 123;
                        this.continueStatement();
                    }
                    break;
                case LPCParser.FALLTHROUGH:
                    this.enterOuterAlt(_localctx, 13);
                    {
                        this.state = 124;
                        this.fallthroughStatement();
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    block() {
        let _localctx = new BlockContext(this._ctx, this.state);
        this.enterRule(_localctx, 6, LPCParser.RULE_block);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 127;
                this.match(LPCParser.LBRACE);
                this.state = 131;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << LPCParser.IF) | (1 << LPCParser.WHILE) | (1 << LPCParser.FOR) | (1 << LPCParser.DO) | (1 << LPCParser.SWITCH) | (1 << LPCParser.BREAK) | (1 << LPCParser.CONTINUE) | (1 << LPCParser.RETURN) | (1 << LPCParser.FOREACH) | (1 << LPCParser.FALLTHROUGH) | (1 << LPCParser.EFUN) | (1 << LPCParser.NEW) | (1 << LPCParser.CATCH) | (1 << LPCParser.SSCANF) | (1 << LPCParser.PARSE_COMMAND) | (1 << LPCParser.TIME_EXPRESSION) | (1 << LPCParser.PRIVATE) | (1 << LPCParser.PROTECTED) | (1 << LPCParser.PUBLIC) | (1 << LPCParser.STATIC) | (1 << LPCParser.NOMASK) | (1 << LPCParser.VARARGS) | (1 << LPCParser.NOSAVE) | (1 << LPCParser.REF) | (1 << LPCParser.VOID) | (1 << LPCParser.INT))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (LPCParser.STRING - 32)) | (1 << (LPCParser.OBJECT - 32)) | (1 << (LPCParser.ARRAY - 32)) | (1 << (LPCParser.MAPPING - 32)) | (1 << (LPCParser.FLOAT - 32)) | (1 << (LPCParser.BUFFER - 32)) | (1 << (LPCParser.MIXED - 32)) | (1 << (LPCParser.FUNCTION - 32)) | (1 << (LPCParser.CLASS - 32)) | (1 << (LPCParser.STRUCT - 32)) | (1 << (LPCParser.CLOSURE - 32)) | (1 << (LPCParser.LBRACE - 32)) | (1 << (LPCParser.LPAREN - 32)))) !== 0) || ((((_la - 74)) & ~0x1F) === 0 && ((1 << (_la - 74)) & ((1 << (LPCParser.SCOPE_RESOLUTION - 74)) | (1 << (LPCParser.MINUS - 74)) | (1 << (LPCParser.INC - 74)) | (1 << (LPCParser.DEC - 74)) | (1 << (LPCParser.NOT - 74)) | (1 << (LPCParser.BITWISE_NOT - 74)) | (1 << (LPCParser.STRING_LITERAL - 74)) | (1 << (LPCParser.NUMBER - 74)) | (1 << (LPCParser.IDENTIFIER - 74)))) !== 0)) {
                    {
                        {
                            this.state = 128;
                            this.statement();
                        }
                    }
                    this.state = 133;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 134;
                this.match(LPCParser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    expressionStatement() {
        let _localctx = new ExpressionStatementContext(this._ctx, this.state);
        this.enterRule(_localctx, 8, LPCParser.RULE_expressionStatement);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 136;
                this.expression(0);
                this.state = 137;
                this.match(LPCParser.SEMICOLON);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    variableDeclaration() {
        let _localctx = new VariableDeclarationContext(this._ctx, this.state);
        this.enterRule(_localctx, 10, LPCParser.RULE_variableDeclaration);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 139;
                this.typeSpecifier();
                this.state = 140;
                this.variableDeclarator();
                this.state = 145;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === LPCParser.COMMA) {
                    {
                        {
                            this.state = 141;
                            this.match(LPCParser.COMMA);
                            this.state = 142;
                            this.variableDeclarator();
                        }
                    }
                    this.state = 147;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 148;
                this.match(LPCParser.SEMICOLON);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    variableDeclarator() {
        let _localctx = new VariableDeclaratorContext(this._ctx, this.state);
        this.enterRule(_localctx, 12, LPCParser.RULE_variableDeclarator);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 153;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === LPCParser.STAR) {
                    {
                        {
                            this.state = 150;
                            this.match(LPCParser.STAR);
                        }
                    }
                    this.state = 155;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 156;
                this.identifier();
                this.state = 159;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === LPCParser.ASSIGN) {
                    {
                        this.state = 157;
                        this.match(LPCParser.ASSIGN);
                        this.state = 158;
                        this.expression(0);
                    }
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    functionDeclaration() {
        let _localctx = new FunctionDeclarationContext(this._ctx, this.state);
        this.enterRule(_localctx, 14, LPCParser.RULE_functionDeclaration);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 161;
                this.typeSpecifier();
                this.state = 162;
                this.identifier();
                this.state = 163;
                this.match(LPCParser.LPAREN);
                this.state = 165;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (((((_la - 22)) & ~0x1F) === 0 && ((1 << (_la - 22)) & ((1 << (LPCParser.PRIVATE - 22)) | (1 << (LPCParser.PROTECTED - 22)) | (1 << (LPCParser.PUBLIC - 22)) | (1 << (LPCParser.STATIC - 22)) | (1 << (LPCParser.NOMASK - 22)) | (1 << (LPCParser.VARARGS - 22)) | (1 << (LPCParser.NOSAVE - 22)) | (1 << (LPCParser.REF - 22)) | (1 << (LPCParser.VOID - 22)) | (1 << (LPCParser.INT - 22)) | (1 << (LPCParser.STRING - 22)) | (1 << (LPCParser.OBJECT - 22)) | (1 << (LPCParser.ARRAY - 22)) | (1 << (LPCParser.MAPPING - 22)) | (1 << (LPCParser.FLOAT - 22)) | (1 << (LPCParser.BUFFER - 22)) | (1 << (LPCParser.MIXED - 22)) | (1 << (LPCParser.FUNCTION - 22)) | (1 << (LPCParser.CLASS - 22)) | (1 << (LPCParser.STRUCT - 22)) | (1 << (LPCParser.CLOSURE - 22)))) !== 0) || _la === LPCParser.ELLIPSIS) {
                    {
                        this.state = 164;
                        this.parameterList();
                    }
                }
                this.state = 167;
                this.match(LPCParser.RPAREN);
                this.state = 170;
                this._errHandler.sync(this);
                switch (this._input.LA(1)) {
                    case LPCParser.LBRACE:
                        {
                            this.state = 168;
                            this.block();
                        }
                        break;
                    case LPCParser.SEMICOLON:
                        {
                            this.state = 169;
                            this.match(LPCParser.SEMICOLON);
                        }
                        break;
                    default:
                        throw new NoViableAltException_1.NoViableAltException(this);
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    parameterList() {
        let _localctx = new ParameterListContext(this._ctx, this.state);
        this.enterRule(_localctx, 16, LPCParser.RULE_parameterList);
        let _la;
        try {
            let _alt;
            this.state = 185;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case LPCParser.PRIVATE:
                case LPCParser.PROTECTED:
                case LPCParser.PUBLIC:
                case LPCParser.STATIC:
                case LPCParser.NOMASK:
                case LPCParser.VARARGS:
                case LPCParser.NOSAVE:
                case LPCParser.REF:
                case LPCParser.VOID:
                case LPCParser.INT:
                case LPCParser.STRING:
                case LPCParser.OBJECT:
                case LPCParser.ARRAY:
                case LPCParser.MAPPING:
                case LPCParser.FLOAT:
                case LPCParser.BUFFER:
                case LPCParser.MIXED:
                case LPCParser.FUNCTION:
                case LPCParser.CLASS:
                case LPCParser.STRUCT:
                case LPCParser.CLOSURE:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        {
                            this.state = 172;
                            this.parameter();
                            this.state = 177;
                            this._errHandler.sync(this);
                            _alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
                            while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                                if (_alt === 1) {
                                    {
                                        {
                                            this.state = 173;
                                            this.match(LPCParser.COMMA);
                                            this.state = 174;
                                            this.parameter();
                                        }
                                    }
                                }
                                this.state = 179;
                                this._errHandler.sync(this);
                                _alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
                            }
                            this.state = 182;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                            if (_la === LPCParser.COMMA) {
                                {
                                    this.state = 180;
                                    this.match(LPCParser.COMMA);
                                    this.state = 181;
                                    this.match(LPCParser.ELLIPSIS);
                                }
                            }
                        }
                    }
                    break;
                case LPCParser.ELLIPSIS:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 184;
                        this.match(LPCParser.ELLIPSIS);
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    parameter() {
        let _localctx = new ParameterContext(this._ctx, this.state);
        this.enterRule(_localctx, 18, LPCParser.RULE_parameter);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 187;
                this.typeSpecifier();
                this.state = 191;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === LPCParser.STAR) {
                    {
                        {
                            this.state = 188;
                            this.match(LPCParser.STAR);
                        }
                    }
                    this.state = 193;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 194;
                this.identifier();
                this.state = 197;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === LPCParser.ASSIGN) {
                    {
                        this.state = 195;
                        this.match(LPCParser.ASSIGN);
                        this.state = 196;
                        this.expression(0);
                    }
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    inheritStatement() {
        let _localctx = new InheritStatementContext(this._ctx, this.state);
        this.enterRule(_localctx, 20, LPCParser.RULE_inheritStatement);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 199;
                this.match(LPCParser.INHERIT);
                this.state = 200;
                _la = this._input.LA(1);
                if (!(_la === LPCParser.STRING_LITERAL || _la === LPCParser.IDENTIFIER)) {
                    this._errHandler.recoverInline(this);
                }
                else {
                    if (this._input.LA(1) === Token_1.Token.EOF) {
                        this.matchedEOF = true;
                    }
                    this._errHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 201;
                this.match(LPCParser.SEMICOLON);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    preprocessorDirective() {
        let _localctx = new PreprocessorDirectiveContext(this._ctx, this.state);
        this.enterRule(_localctx, 22, LPCParser.RULE_preprocessorDirective);
        try {
            this.state = 208;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case LPCParser.PP_INCLUDE:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 203;
                        this.ppInclude();
                    }
                    break;
                case LPCParser.PP_DEFINE:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 204;
                        this.ppDefine();
                    }
                    break;
                case LPCParser.PP_ERROR:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 205;
                        this.ppError();
                    }
                    break;
                case LPCParser.PP_PRAGMA:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 206;
                        this.ppPragma();
                    }
                    break;
                case LPCParser.PP_IFDEF:
                case LPCParser.PP_IFNDEF:
                case LPCParser.PP_IF:
                    this.enterOuterAlt(_localctx, 5);
                    {
                        this.state = 207;
                        this.ppConditional();
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
